Fixed missing color, decreased filter update frequency.

--- a/src/app/component/ResetButton/ResetButton.style.scss
+++ b/src/app/component/ResetButton/ResetButton.style.scss
@@ -10,7 +10,7 @@
  */
 
 :root {
-    --reset-button-background: #{$dusty-grey};
+    --reset-button-background: var(--secondary-base-color);
 }
 
 .ResetButton {
